feat(gapi): implement session api
